Create header html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     </head>
 
     <body>
-        
+        <header>
+            <img src="" alt="">
+            <ul class="navigation">
+                <li>
+                    <a href="#">header link 1</a>
+                </li>
+                <li><
+                    <a href="#">header link 2</a>/li>
+                <li>
+                    <a href="#">header link 3</a>
+                </li>
+            </ul>
+        </header>
     </body>
 </html>
