Create service-section html

--- a/index.html
+++ b/index.html
@@ -20,5 +20,18 @@
                 </li>
             </ul>
         </header>
+
+        <!-- Main body -->
+        <main>
+            <div class="service-section">
+                <div class="service-text">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>                
+                </div>
+                <img src="" alt="missing image">
+            </div>
+
+            
+        </main>
     </body>
 </html>
