--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
                 <li>
                     <a href="#">header link 1</a>
                 </li>
-                <li><
-                    <a href="#">header link 2</a>/li>
+                <li>
+                    <a href="#">header link 2</a>
                 <li>
                     <a href="#">header link 3</a>
                 </li>
@@ -31,7 +31,7 @@
                 <img src="" alt="missing image">
             </div>
 
-            
+
         </main>
     </body>
 </html>
