--- a/index.html
+++ b/index.html
@@ -31,7 +31,27 @@
                 <img src="" alt="missing image">
             </div>
 
+            <div class="information-section">
+                <h2>Some random information</h2>
+                <div class="info">
+                    <img src="" alt="missing image">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info">
+                    <img src="" alt="missing image">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info">
+                    <img src="" alt="missing image">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info">
+                    <img src="" alt="missing image">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
 
+            
         </main>
     </body>
 </html>
