--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
                 </div>
             </div>
 
+            <div class="quote-section">
+                <!-- Unsure about quote format -->
+                <blockquote>
+                    This is an inspiring quote, or a testimonial form a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+                </blockquote>
+                <p>- Thor, God of Thunder</p>
+            </div>
+
             
         </main>
     </body>
