Create call to action section html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,20 @@
                 <p>- Thor, God of Thunder</p>
             </div>
 
-            
+            <div class="call-to-action-section">
+                <div class="call-to-action">
+                    <div class="call-to-action-text">
+                        <!-- Should this be h3? -->
+                        <p><strong>Call to action! It's time!</strong></p>
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <button type="button">Sign up</button>
+                </div>
+            </div>
         </main>
+
+        <footer>
+            <p>Copyright &#169; The Odin Project 2021</p>
+        </footer>
     </body>
 </html>
