--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <header>
-            <img src="" alt="">
+            <img src="" alt="missing image">
             <ul class="navigation">
                 <li>
                     <a href="#">header link 1</a>
