Change logo img to text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
     <body>
         <header>
-            <img src="" alt="missing image">
+            <!-- Should this be p? -->
+            <div class="logo">
+                Header Logo
+            </div>
             <ul class="navigation">
                 <li>
                     <a href="#">header link 1</a>
