Convert section divs into section elements

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 
         <!-- Main body -->
         <main>
-            <div class="hero-section">
+            <section class="hero-section">
                 <div class="hero-text">
                     <h1>This website is awesome</h1>
                     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>                
                 </div>
                 <img src="" alt="missing image">
-            </div>
+            </section>
 
-            <div class="information-section">
+            <section class="information-section">
                 <h2>Some random information</h2>
                 <div class="info">
                     <img src="" alt="missing image">
@@ -52,17 +52,17 @@
                     <img src="" alt="missing image">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
-            </div>
+            </section>
 
-            <div class="quote-section">
+            <section class="quote-section">
                 <!-- Unsure about quote format -->
                 <blockquote>
                     This is an inspiring quote, or a testimonial form a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
                 </blockquote>
                 <p>- Thor, God of Thunder</p>
-            </div>
+            </section>
 
-            <div class="call-to-action-section">
+            <section class="call-to-action-section">
                 <div class="call-to-action">
                     <div class="call-to-action-text">
                         <!-- Should this be h3? -->
@@ -71,7 +71,7 @@
                     </div>
                     <button type="button">Sign up</button>
                 </div>
-            </div>
+            </section>
         </main>
 
         <footer>
