--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <section class="hero-section">
                 <div class="hero-text">
                     <h1>This website is awesome</h1>
-                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>                
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                    <button type="button">Sign up</button>                
                 </div>
                 <img src="" alt="missing image">
             </section>
