Create info container for styling

--- a/index.html
+++ b/index.html
@@ -37,21 +37,24 @@
 
             <section class="information-section">
                 <h2>Some random information</h2>
-                <div class="info">
+                <div class="container">
+                    <div class="info">
                     <img src="" alt="missing image">
                     <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="info">
+                        <img src="" alt="missing image">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="info">
+                        <img src="" alt="missing image">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="info">
+                        <img src="" alt="missing image">
+                        <p>this is some subtext under an illustration or image</p>                 
                 </div>
-                <div class="info">
-                    <img src="" alt="missing image">
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="info">
-                    <img src="" alt="missing image">
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="info">
-                    <img src="" alt="missing image">
-                    <p>this is some subtext under an illustration or image</p>
+
                 </div>
             </section>
 
