Center all without padding

--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
     </head>
 
     <body>
+        <div class="center">
         <header>
-            <!-- Should this be p? -->
-            <div class="logo">
-                Header Logo
-            </div>
-            <ul class="navigation">
-                <li>
-                    <a href="#">header link 1</a>
-                </li>
-                <li>
-                    <a href="#">header link 2</a>
-                <li>
-                    <a href="#">header link 3</a>
-                </li>
-            </ul>
+             <!-- Should this be p? -->
+        <div class="logo">
+            Header Logo
+        </div>
+        <ul class="navigation">
+            <li>
+                <a href="#">header link 1</a>
+            </li>
+            <li>
+                <a href="#">header link 2</a>
+            <li>
+                <a href="#">header link 3</a>
+            </li>
+        </ul>
         </header>
 
         <!-- Main body -->
@@ -80,6 +81,8 @@
 
         <footer>
             <p>Copyright &#169; The Odin Project 2021</p>
-        </footer>
+        </footer>           
+    </div>
+
     </body>
 </html>
