--- a/index.html
+++ b/index.html
@@ -59,11 +59,14 @@
             </section>
 
             <section class="quote-section">
-                <!-- Unsure about quote format -->
-                <blockquote>
-                    This is an inspiring quote, or a testimonial form a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
-                </blockquote>
-                <p>- Thor, God of Thunder</p>
+                <div class="quote-container">
+                    <!-- Unsure about quote format -->
+                    <blockquote>
+                        This is an inspiring quote, or a testimonial form a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+                    </blockquote>
+                    <p>- Thor, God of Thunder</p>                   
+                </div>
+
             </section>
 
             <section class="call-to-action-section">
